Insercao do fronts e muitos outros acrescimos nos projetos

--- a/bot_telegram_personal_finance/.env.example
+++ b/bot_telegram_personal_finance/.env.example
@@ -1,1 +1,6 @@
 BOT_TOKEN=12345676890DESFGRTHVTGR5678986TGB
+OPENAI_API_KEY=sk-proj-abcdefghijklmnopqrstuvxwyz
+GOOGLE_SHEETS=324j23u45u43h5j435j34h5j34h5
+SPREAD_SHEET_ID=
+WORKSHEET_NAME=
+
